--- a/data_preprocessing/data_preprocessing_tools.ipynb
+++ b/data_preprocessing/data_preprocessing_tools.ipynb
@@ -42,15 +42,15 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "N-qiINBQSK2g"
-      },
       "source": [
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "metadata": {
+        "id": "5DTaycLjkLjC"
+      },
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -64,38 +64,71 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "WwEPNDWySTKm"
-      },
       "source": [
         "dataset = pd.read_csv('Data.csv')\n",
-        "X = dataset.iloc[:, :-1].values\n",
-        "y = dataset.iloc[:, -1].values"
+        "X = dataset.iloc[:, :-1].values  #[ all rows , all columns except last one (0 to n-1)]\n",
+        "y = dataset.iloc[:, -1].values # all rows for last column"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "pixlh9T6kwd6"
+      },
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "hCsz2yCebe1R"
-      },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "ujFXW7rgnMTh",
+        "outputId": "debfa478-7446-4cf9-a5f3-dadfdf6212ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['France' 44.0 72000.0]\n",
+            " ['Spain' 27.0 48000.0]\n",
+            " ['Germany' 30.0 54000.0]\n",
+            " ['Spain' 38.0 61000.0]\n",
+            " ['Germany' 40.0 nan]\n",
+            " ['France' 35.0 58000.0]\n",
+            " ['Spain' nan 52000.0]\n",
+            " ['France' 48.0 79000.0]\n",
+            " ['Germany' 50.0 83000.0]\n",
+            " ['France' 37.0 67000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "eYrOQ43XcJR3"
-      },
       "source": [
         "print(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "jAxEn0EdnbcE",
+        "outputId": "17a64ab5-df6f-41ee-8bf3-a525a0755770",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['No' 'Yes' 'No' 'No' 'Yes' 'Yes' 'No' 'Yes' 'No' 'Yes']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -108,28 +141,51 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "c93k7ipkSexq"
-      },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
-        "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
-        "imputer.fit(X[:, 1:3])\n",
+        "\n",
+        "imputer = SimpleImputer(missing_values = np.nan, strategy = 'mean') # replace nan values with mean for that feature\n",
+        "\n",
+        "imputer.fit(X[:, 1:3]) # only numerical columns\n",
         "X[:, 1:3] = imputer.transform(X[:, 1:3])"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "GBrDJqa_oMxM"
+      },
+      "execution_count": 74,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "3UgLdMS_bjq_"
-      },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "Xc42WNW0tf1p",
+        "outputId": "2926d9d2-6049-45c2-c724-2225c329e7bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['France' 44.0 72000.0]\n",
+            " ['Spain' 27.0 48000.0]\n",
+            " ['Germany' 30.0 54000.0]\n",
+            " ['Spain' 38.0 61000.0]\n",
+            " ['Germany' 40.0 63777.77777777778]\n",
+            " ['France' 35.0 58000.0]\n",
+            " ['Spain' 38.77777777777778 52000.0]\n",
+            " ['France' 48.0 79000.0]\n",
+            " ['Germany' 50.0 83000.0]\n",
+            " ['France' 37.0 67000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -151,28 +207,50 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "5hwuVddlSwVi"
-      },
       "source": [
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
-        "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
-        "X = np.array(ct.fit_transform(X))"
+        "\n",
+        "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough') # 'passthrough' brings all remaining columns to output without transformation\n",
+        "X = np.array(ct.fit_transform(X)) # encode the first column"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "A9dvZb9OuWR_"
+      },
+      "execution_count": 76,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "f7QspewyeBfx"
-      },
       "source": [
         "print(X)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "kYvZunjK2E00",
+        "outputId": "de4127c4-0d32-492a-e43d-f14d47ed7f56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1.0 0.0 0.0 44.0 72000.0]\n",
+            " [0.0 0.0 1.0 27.0 48000.0]\n",
+            " [0.0 1.0 0.0 30.0 54000.0]\n",
+            " [0.0 0.0 1.0 38.0 61000.0]\n",
+            " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+            " [1.0 0.0 0.0 35.0 58000.0]\n",
+            " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+            " [1.0 0.0 0.0 48.0 79000.0]\n",
+            " [0.0 1.0 0.0 50.0 83000.0]\n",
+            " [1.0 0.0 0.0 37.0 67000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -185,27 +263,40 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "XgHCShVyTOYY"
-      },
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
         "le = LabelEncoder()\n",
         "y = le.fit_transform(y)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "w3D15voQ2tfF"
+      },
+      "execution_count": 78,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "FyhY8-gPpFCa"
-      },
       "source": [
         "print(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "aAAHgDLn3Ugu",
+        "outputId": "af2a9841-8da7-4565-d773-576fc94d53d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 0 0 1 1 0 1 0 1]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -217,60 +308,126 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "source": [
+        "We perform the split before feature scaling because we don't want to include the test data to affect our training set."
+      ],
       "metadata": {
-        "id": "pXgA6CzlqbCl"
-      },
+        "id": "i1quhGbv83Ci"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1)"
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=1) # 20% test data as we need more data for training the model"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "EyPybiRj8JSY"
+      },
+      "execution_count": 80,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "GuwQhFdKrYTM"
-      },
       "source": [
         "print(X_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "1yyyA4u1_nZx",
+        "outputId": "a1d4de0f-f282-4cc4-8e16-bba341855c72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+            " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+            " [1.0 0.0 0.0 44.0 72000.0]\n",
+            " [0.0 0.0 1.0 38.0 61000.0]\n",
+            " [0.0 0.0 1.0 27.0 48000.0]\n",
+            " [1.0 0.0 0.0 48.0 79000.0]\n",
+            " [0.0 1.0 0.0 50.0 83000.0]\n",
+            " [1.0 0.0 0.0 35.0 58000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "TUrX_Tvcrbi4"
-      },
       "source": [
         "print(X_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "suYDYHnS_njE",
+        "outputId": "0345cefb-9119-48e9-ab47-6485041a2409",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.0 1.0 0.0 30.0 54000.0]\n",
+            " [1.0 0.0 0.0 37.0 67000.0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "pSMHiIsWreQY"
-      },
       "source": [
         "print(y_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "OtYXf8e7_nrD",
+        "outputId": "5bc12c56-87eb-4a2e-d449-2970d8a0416a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 0 0 1 1 0 1]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "I_tW7H56rgtW"
-      },
       "source": [
         "print(y_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "Nlf-YHK-_n0b",
+        "outputId": "6e451374-4794-43cc-9981-68af9f1372cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -282,40 +439,82 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "source": [
+        "Standardisation(some min and max range) is mostly preferred over normalization(0 to 1 ranged values)"
+      ],
       "metadata": {
-        "id": "AxjSUXFQqo-3"
-      },
+        "id": "Lq__zCYnEcnX"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
         "sc = StandardScaler()\n",
-        "X_train = sc.fit_transform(X_train)\n",
-        "X_test = sc.transform(X_test)"
+        "X_train[:, 3:] = sc.fit_transform(X_train[:, 3:]) # ignore the country related columns\n",
+        "X_test[:, 3:] = sc.transform(X_test[:, 3:]) # ionly apply transform as we already have a model trained with first input"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "Dx1bm5SN_lQ4"
+      },
+      "execution_count": 85,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "DWPET8ZdlMnu"
-      },
       "source": [
         "print(X_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "l7V5uanBFS5d",
+        "outputId": "eab890bd-57f0-4cf3-913d-00c7a57438b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.0 0.0 1.0 -0.19159184384578545 -1.0781259408412425]\n",
+            " [0.0 1.0 0.0 -0.014117293757057777 -0.07013167641635372]\n",
+            " [1.0 0.0 0.0 0.566708506533324 0.633562432710455]\n",
+            " [0.0 0.0 1.0 -0.30453019390224867 -0.30786617274297867]\n",
+            " [0.0 0.0 1.0 -1.9018011447007988 -1.420463615551582]\n",
+            " [1.0 0.0 0.0 1.1475343068237058 1.232653363453549]\n",
+            " [0.0 1.0 0.0 1.4379472069688968 1.5749910381638885]\n",
+            " [1.0 0.0 0.0 -0.7401495441200351 -0.5646194287757332]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "sTXykB_QlRjE"
-      },
       "source": [
         "print(X_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "nWI6n9HKFS_P",
+        "outputId": "fe022a39-b8f6-4600-81b5-809581943566",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.0 1.0 0.0 -1.4661817944830124 -0.9069571034860727]\n",
+            " [1.0 0.0 0.0 -0.44973664397484414 0.2056403393225306]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
